(perf) (ui)
- android perf optimizations, prevent OS form killing indexing thread by offloading to service (show notification)
- dictionary panel improvements: add About, Remove, Progress, and more
- add DSL abbreviations support
- allow delete index and original dictionaries from the dictionary panel - loopback only, for remote LAN users ALLOW_REMOTE_DELETE=1 is required (off by default)
- CPU and memory optimizations
-
